--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -30,7 +30,7 @@ mixin header(dark, isGuest, activeMenu, isUser, isAgency)
                         +navbar-description 44062
 
                 +navbar-item(class=getActive('independent'))
-                    +navbar-link(href='model-list.html')
+                    +navbar-link(href='model-list-independent.html')
                         +navbar-heading Independent
                         +navbar-description 41908
 
