--- a/markup/static/stylus/mixins.styl
+++ b/markup/static/stylus/mixins.styl
@@ -150,7 +150,7 @@ iziAnimation(bg = mainColor, color = #fff)
         height: 50%
         transition: transform 0.25s, opacity 0.25s;
         transition-timing-function: ease-in-out;
-        border-radius: 50%
+        // border-radius: 50%
         background-color: bg
         transform-origin: 100% 50%
         transform: scale3d(1, 2, 1)
