--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -176,7 +176,7 @@
                     width initial
 
                     .navbar__link
-                        padding-right: 30px
+                        padding: 0 36px
 
                     .navbar__col
                         margin: 0
