--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -31,6 +31,7 @@
         & ^[0]__item
             min-width: initial
             min-height: 80px
+            flex: 1
 
             &:not(:first-child)
                 border: 0
@@ -77,9 +78,9 @@
                 +below(1320px)
                     padding-right 12px
 
-            .navbar__col:last-of-type
-                width calc(100% - 52px)
-                overflow hidden
+            // .navbar__col:last-of-type
+            //     width calc(100% - 52px)
+            //     overflow hidden
 
             .navbar__heading
                 width 100%
@@ -176,6 +177,10 @@
         transition(all)
         flex-shrink: 0
         height: 100%
+
+        .navbar__dropdown &
+            justify-content: center
+            text-align: center
 
         &_dropdown
             position: relative
