--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -18,6 +18,9 @@ grid-modifiers = ( one two three four five six seven eight nine ten elevel twelv
     &_masonry
         justify-content: center
 
+        > *:not(.grid__col)
+            opacity: 0
+
     &first-of-type
         margin-top -grid-gap
 
