--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -26,4 +26,5 @@ html(class="no-js", lang="en")
         script(src='%=static=%js/separate-js/jquery.ui.touch-punch.min.js')
         script(src='%=static=%js/separate-js/jquery.scrollbar.min.js')
         script(src='%=static=%js/separate-js/velocity.min.js')
+        script(src='%=static=%js/separate-js/datepicker.min.js')
         script(src='%=static=%js/main%=hash=%%=min=%.js')
