--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -764,22 +764,11 @@ mixin user-fill-profile-8
                     +col(6)
                         +field
                             +field-label From
-                            +selectbox
-                                +selectbox-control(name='from')
-                                    option 20 JUL
-                                    option 21 JUL
-                                    option(selected) 22 JUL
-                                    option 23 JUL
-                                    option 24 JUL
+                            +field-input.js-datepicker
                     +col(6)
                         +field
                             +field-label To
-                            +selectbox
-                                +selectbox-control(name='to')
-                                    option 26 JUL
-                                    option 27 JUL
-                                    option 28 JUL
-                                    option(selected) 29 JUL
+                            +field-input.js-datepicker
 
                 +grid
                     +col(2)
