--- a/markup/components/boost-preview/boost-preview.styl
+++ b/markup/components/boost-preview/boost-preview.styl
@@ -3,10 +3,15 @@
     flex-direction: column
     width: 100%
     height: 100%
+    m-transition(all)
 
-    .badges {
+    &.preload
+        opacity 0
+        pointer-events none
+        transform: translateY(100px)
+
+    .badges
         overflow: hidden;
-    }
 
     &:hover
         & ^[0]__content
