--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -34,6 +34,7 @@ block content
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 02_card/video popup
             +demo-link('agency-list.html') 03/List_agency_1
             +demo-link('agency.html') 03/List_agency_(2-3)
+            +demo-link('agency.html') 03/List_agency_(2-3) empty
             +demo-link('model-map.html') 04/Map_model 0
             +demo-link('model-map-agencies.html') 04/Map_model (agencies)
             +demo-link('user-settings.html') 06/Settings
