--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -148,6 +148,10 @@
             font-style: italic
             iziAnimation(darkGreyColor, mainColor)
 
+            .grid__col_six &
+                +below(768)
+                    width: 50px
+
         &_profile
             flex: 1
             color darkGreyColor
