--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -750,6 +750,8 @@ mixin user-fill-profile-8
                                         +field
                                             +field-label Address
                                             +field-input Los Angeles
+                                    +col(12)
+                                        +map(true)#user-fill-profile-map
 
             .user-fill-profile__section.user-fill-profile__section_small-top-space
                 +grid
