--- a/markup/pages/user-fill-profile8.pug
+++ b/markup/pages/user-fill-profile8.pug
@@ -23,6 +23,7 @@ block popups
     +select-city-popup
 
 block scripts
+    script(src='%=static=%js/separate-js/maps/user-profile-map.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step8.js')
 
 block footer
