--- a/markup/components/send-form/send-form.styl
+++ b/markup/components/send-form/send-form.styl
@@ -30,7 +30,7 @@
         padding: 21px 0
         background-color: transparent
         letter-spacing 1px
-        display: none
+        display: inline-block !important
         transition(all)
 
         +below(768px)
