--- a/markup/components/badges/badges.styl
+++ b/markup/components/badges/badges.styl
@@ -31,6 +31,7 @@
         text-transform: uppercase
         padding: 0 16px
         letter-spacing: 1px
+        m-transition(all)
 
         &_skew
             margin-right: -5px
