--- a/markup/components/boost-account/boost-account.styl
+++ b/markup/components/boost-account/boost-account.styl
@@ -84,6 +84,8 @@
         align-items: center
         padding: 0 40px
         m-transition(all)
+        cursor: pointer
+        text-decoration none
 
         +below(920px)
             padding: 40px
