--- a/markup/components/boost-preview/boost-preview.styl
+++ b/markup/components/boost-preview/boost-preview.styl
@@ -3,26 +3,15 @@
     flex-direction: column
     width: 100%
     height: 100%
+    box-shadow 0 0 0 rgba(0, 0, 0, 0)
+    m-transition(all)
 
     .badges
         overflow: hidden;
 
     &:hover
-        & ^[0]__content
-            border-color: mainColor
-
-        & ^[0]__heading
-            color: mainColor
-
-        & ^[0]__description
-            color: rgba(mainColor, .59)
-
-        & ^[0]__buttons
-            border-color: mainColor
-
-        & ^[0]__btn
-            span
-                color: mainColor
+        box-shadow: 0 10px 40px rgba(29, 29, 29, 0.1)
+        background-color #fff
 
     &_interactive
         m-transition(all)
@@ -309,9 +298,6 @@
 
                 & ^[0]__description
                     color: rgba(#fff, .59)
-
-                .badges
-                    opacity 0
 
                 .icon-button
                     border-color: rgba(#fff, .15)
