--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -119,7 +119,7 @@
                             color: mainColor
 
                 &__item_logo
-                    min-width: initial
+                    min-width: auto
 
                     .navbar__link
                         padding: 10px
@@ -142,7 +142,7 @@
                     display: none
 
                 &__item_credits
-                    min-width: initial
+                    min-width: auto
 
 
 
@@ -172,8 +172,8 @@
                         fill: mainColor
 
                 &__item_profile
-                    min-width: initial
-                    width initial
+                    min-width: auto
+                    width auto
 
                     .navbar__link
                         padding: 0 36px
