fixes auth popup

--- a/markup/components/auth-popup/auth-popup.pug
+++ b/markup/components/auth-popup/auth-popup.pug
@@ -7,7 +7,7 @@ mixin auth-popup()
         +popup-close.popup__close_no_translate
         +container.container__height_100p
             +b.auth-popup&attributes(attributes)
-                +e.col._action
+                +e.col._action.active
                     +e.col
                         +e.IMG(src='__static__img/content/auth-popup/singup.jpg' alt='').image
                         +e.content._transparentify
