--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -614,140 +614,169 @@ mixin user-fill-profile-7
             +grid
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 0) Classical Sex
-                    +add-input('classical-sex-value', '100 $', '', 'text', 'js-change-currency-el')
+                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 1) Sex
-                    +add-input('sex-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('sex-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 2) Deep throating
-                    +add-input('deep-throating-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('deep-throating-value', '', '0 $', 'text', 'js-change-currency-el')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 3) Anal sex
-                    +add-input('sex-value', '2500 $', '', 'text', 'js-change-currency-el')
+                    +add-input('sex-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 4) BJ with condom
                     +add-input('bj-with-condom-value', '0 $', '', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 5) BJ in your car
-                    +add-input('bj-in-your-car-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('bj-in-your-car-value', '', '0 $', 'text', 'js-change-currency-el')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 6) Lesbian sex
-                    +add-input('lesbian-sex-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('lesbian-sex-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 7) Cunnilingus
-                    +add-input('cunnilingus-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('cunnilingus-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 8) Sex toys
-                    +add-input('sex-toys-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('sex-toys-value', '', '0 $', 'text', 'js-change-currency-el')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 9) Couples
-                    +add-input('classical-sex-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 10) BJ without condom
-                    +add-input('bj-without-condom-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('bj-without-condom-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 11) Cum on breast
-                    +add-input('on-breast-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('on-breast-value', '', '0 $', 'text', 'js-change-currency-el')
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 12) Cum on face
-                    +add-input('cum-on-face-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('cum-on-face-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(false, 'sex', 13) Cum in mouth
-                    +add-input('cum-in-mount-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('cum-in-mount-value', '', '0 $', 'text', 'js-change-currency-el')
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 14) Classical sex
-                    +add-input('classical-sex-value', '0 $', '', 'text', 'js-change-currency-el')
+                    +add-input('classical-sex-value', '', '0 $', 'text', 'js-change-currency-el')
 
         .user-fill-profile__section
                 +heading._md Massage
                 +grid
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 1) Classic
-                    +col(4)
+                        +add-input('massage-classic', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'massage', 2) Relaxing
-                    +col(4)
+                        +add-input('massage-relaxing', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 3) Urological
+                        +add-input('massage-urogical', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 4) Professional
-                    +col(4)
+                        +add-input('massage-pro', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'massage', 5) Thai
-                    +col(4)
+                        +add-input('massage-thai', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'massage', 6) Specific area
+                        +add-input('massage-specific', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 7) Erotic
-                    +col(4)
+                        +add-input('massage-erotic', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'massage', 8) Sakura
+                        +add-input('massage-sakura', '', '0 $', 'text', 'js-change-currency-el')
 
         .user-fill-profile__section
                 +heading._md Striptease
                 +grid
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 1) Professional
-                    +col(4)
+                        +add-input('striptease-pro', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 2) Amateur
-                    +col(4)
+                        +add-input('striptease-amateur', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 3) Hardcore Lesbi-show
+                        +add-input('striptease-hardcore-lesbi', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'striptease', 4) Soft Lesbi-show
+                        +add-input('striptease-soft-lesbi', '', '0 $', 'text', 'js-change-currency-el')
 
         .user-fill-profile__section
                 +heading._md BDSM
                 +grid
-                    +col(4)
-                        +checkbox(false, 'striptease', 1) Bandage
-                    +col(4)
-                        +checkbox(true, 'striptease', 2) Games
-                    +col(4)
-                        +checkbox(true, 'striptease', 3) Getting Whipped
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'bdsm', 1) Bandage
+                        +add-input('bdsm-bandage', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(true, 'bdsm', 2) Games
+                        +add-input('bdsm-games', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(true, 'bdsm', 3) Getting Whipped
+                        +add-input('bdsm-getting-whipped', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
-                        +checkbox(false, 'striptease', 4) Mistress
-                    +col(4)
-                        +checkbox(true, 'striptease', 5) Softcore domination
-                    +col(4)
-                        +checkbox(false, 'striptease', 6) Slave
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'bdsm', 4) Mistress
+                        +add-input('bdsm-smistresss', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(true, 'bdsm', 5) Softcore domination
+                        +add-input('bdsm-softcore-domination', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'bdsm', 6) Slave
+                        +add-input('bdsm-slaves', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
-                        +checkbox(true, 'striptease', 7) Fetish
-                    +col(4)
-                        +checkbox(false, 'striptease', 8) Trampling
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(true, 'bdsm', 7) Fetish
+                        +add-input('bdsm-fetish', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'bdsm', 8) Trampling
+                        +add-input('bdsm-trampling', '', '0 $', 'text', 'js-change-currency-el')
 
         .user-fill-profile__section
                 +heading._md Extreme
                 +grid
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'extreme', 1) Strapon
-                    +col(4)
+                        +add-input('extreme-strapon', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(false, 'extreme', 2) Golden rain, give
-                    +col(4)
+                        +add-input('extreme-golden-rain', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 3) Copro
+                        +add-input('extreme-copro', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 4) Anilingus
-                    +col(4)
+                        +add-input('extreme-anilingus', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 5) Golden rain, receive
-                    +col(4)
+                        +add-input('extreme-golden-rain-receive', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
                         +checkbox(true, 'extreme', 6) Anal fisting
+                        +add-input('extreme-anal-fisting', '', '0 $', 'text', 'js-change-currency-el')
 
-                    +col(4)
-                        +checkbox(false, 'extreme', 7) Fisting
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'extreme-fisting', 7) Fisting
 
         .user-fill-profile__section
                 +heading._md Other
                 +grid
-                    +col(4)
-                        +checkbox(false, 'extreme', 1) Role play
-                    +col(4)
-                        +checkbox(false, 'extreme', 2) Photo/Video
-                    +col(4)
-                        +checkbox(true, 'extreme', 3) Escort
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'other', 1) Role play
+                        +add-input('other-role-play', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(false, 'other', 2) Photo/Video
+                        +add-input('other-photo-video', '', '0 $', 'text', 'js-change-currency-el')
+                    +col(4).grid__col_align_center.grid__col_space_between
+                        +checkbox(true, 'other', 3) Escort
+                        +add-input('other-escort', '', '0 $', 'text', 'js-change-currency-el')
 
                 +col(4)
                     +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
